--- a/src/components/Cell/Cell.css
+++ b/src/components/Cell/Cell.css
@@ -1,9 +1,6 @@
 /* todo: will styling be easier with a table and not a grid? */
 
 .cell {
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
     border: 1px solid black;
 }
 
@@ -23,20 +20,10 @@
     border-bottom: 4px solid black;
 }
 
-.hoverArea {
-    /* is it better to do this, or to conditionally render only when necessary? */
-    color: white;
-    border: 1px solid white;
-
+.valueWrapper {
     display: flex;
     justify-content: center;
-}
-
-.lightPencilMark {
-    color: grey;
-    border: 1px solid grey;
-}
-
-.darkPencilMark {
-    color: magenta;
+    align-items: center;
+    height: 100%;
+    font-size: 40px;
 }
