--- a/src/components/HoverGrid/HoverGrid.css
+++ b/src/components/HoverGrid/HoverGrid.css
@@ -22,3 +22,32 @@
 .darkPencilMark {
     color: magenta;
 }
+
+/* .bigNumber {
+    border: 1px solid grey;
+    color: green;
+    font-size: 40px;
+    position: absolute;
+    z-index: 10;
+    height: 100%;
+    //width: 100%;
+    top: 0;
+    right: 0;
+} */
+
+.bigNumber {
+    border: 1px solid grey;
+    color: green;
+    font-size: 40px;
+    position: absolute;
+    z-index: 10;
+    height: 100%;
+    /* width: 100%;
+    top: 0;
+    right: 0; */
+}
+
+.foo {
+    position: relative;
+    height: 100%;
+}
