--- a/src/components/HoverGrid/HoverGrid.css
+++ b/src/components/HoverGrid/HoverGrid.css
@@ -15,6 +15,7 @@
 
     display: flex;
     justify-content: center;
+    font-size: 20px;
 }
 
 /* TODO: Consider the impact this has on accessibility, if any */
