--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
