--- a/src/components/EntryMethodButtonGroup/EntryMethodButtonGroup.css
+++ b/src/components/EntryMethodButtonGroup/EntryMethodButtonGroup.css
@@ -1,13 +1,15 @@
-.buttonGroup {
-    background-color: darkgray;
+.buttonGroupWrapper {
+    border: 1px solid black;
+    background-color: rgb(195, 181, 181);
     padding: 0.5rem;
 }
 
 .entryMethodButton {
-    height: 2rem;
-    font-size: 1rem;
+    height: 4rem;
+    width: 5rem;
+    font-size: 1.5rem;
 }
 
 .selected {
-    border: 2px solid red;
+    border: 2px solid blue;
 }
