--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,8 @@ code {
 }
 
 .header {
-    background-color: orange;
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-bottom: 1rem;
 }
