--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,22 @@
-.app {
+/* .app {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
     background-color: lightgrey;
+} */
+
+.app {
+    background-color: lightgrey;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-areas:
+        "headerLeft headerCenter headerRight"
+        "mainLeft mainCenter mainRight"
+        "footerLeft footerCenter footerRight";
+    justify-items: center;
 }
