--- a/src/components/SudokuGrid/SudokuGrid.module.css
+++ b/src/components/SudokuGrid/SudokuGrid.module.css
@@ -1,6 +1,7 @@
 .grid {
-    width: 900px;
-    height: 900px;
+    grid-area: mainCenter;
+    width: 750px;
+    height: 750px;
     border: 4px solid black;
     border-right: none;
     border-bottom: none;
