--- a/src/components/SidebarItem/SidebarItem.module.css
+++ b/src/components/SidebarItem/SidebarItem.module.css
@@ -5,7 +5,9 @@
     flex-direction: column;
     background-color: rgb(195, 181, 181);
     flex-grow: 1;
+    justify-content: center;
+    align-items: center;
 }
 
-.sidebarItemTitle {
-}
+/* .sidebarItemTitle {
+} */
