--- a/src/components/MenuItem/MenuItem.module.css
+++ b/src/components/MenuItem/MenuItem.module.css
@@ -1,11 +1,10 @@
 .menuItem {
-    border: 1px solid black;
-    background-color: rgb(195, 181, 181);
     padding: 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .menuItemTitle {
