--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,10 @@
-/* .app {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    background-color: lightgrey;
-} */
-
 .app {
-    background-color: lightgrey;
+    background-color: #EEEEEE;
     width: 100%;
     height: 100%;
     display: grid;
+    /* TODO: I want the left column to shrink priority, and have right column at initial size for as long as possible. 
+       right now, both columns are shrinking evenly when window is resized */
     grid-template-columns: 1fr auto 1fr;
     grid-template-rows: 1fr auto 1fr;
     grid-template-areas:
