--- a/src/components/ButtonGroup/ButtonGroup.module.css
+++ b/src/components/ButtonGroup/ButtonGroup.module.css
@@ -1,6 +1,21 @@
+
+.button {
+    border-radius: 5px;
+    min-width: 5rem;
+    font-size: 15px;
+    background-color: #00adb5;
+    color: #222831;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    border: none;
+}
+
+
 /* todo: is there a better way to disable the default :disabled styles? */
-.button:disabled {
-    color: black;
+.notSelected {
+    background-color: #00adb56e;
 }
 
 /* .buttonGroupWrapper {
@@ -10,5 +25,4 @@
 } */
 
 .selected {
-    border: 2px solid blue;
 }
