--- a/src/components/PrimarySettings/PrimarySettings.module.css
+++ b/src/components/PrimarySettings/PrimarySettings.module.css
@@ -5,8 +5,7 @@
     width: 100%;
     margin-bottom: 1rem;
     margin-top: 1rem;
-    background-color: darkgrey;
-    border: 2px solid black;
+    border: 2px solid #393e46;
 }
 
 .entryMethodButton {
