--- a/src/components/SidebarSettings/SidebarSettings.module.css
+++ b/src/components/SidebarSettings/SidebarSettings.module.css
@@ -1,12 +1,7 @@
 .sidebarSettingsWrapper {
     grid-area: mainRight;
-
-    /* width: 300px; */
-    background-color: darkgrey;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    border: 2px solid black;
-    width: 40rem;
+    border: 2px solid #393e46;
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
