Finish new pencil marking methods

--- a/src/components/Cell/Cell.module.css
+++ b/src/components/Cell/Cell.module.css
@@ -32,18 +32,24 @@
     color: #4444f3e0;
 }
 
-.centralPencilMarks {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
-
-.cornerPencilMarks {
+.pencilMarkRows {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     height: 100%;
+    font-size: 18px;
+}
+
+.outerRow {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
+.middleRow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .valueWrapper {
