Finish difficulty slider

--- a/src/components/DifficultySelection/DifficultySelection.module.css
+++ b/src/components/DifficultySelection/DifficultySelection.module.css
@@ -1,11 +1,3 @@
-.tickmarks {
-    /* currently chrome defaults datalist's css to display: none */
-    display: flex;
-
-    position: relative;
-    top: -40px;
-}
-
-.level {
-    flex-basis: 50%;
+.selectionWrapper {
+    text-align: center;
 }
